2010-11-22  Steffen Ritter  <typo3@steffen-ritter.net>

	* FYI fixed bug #16513: Class hint "mixed" always results to fatal error in t3lib_tree_Tca_DatabaseNode

2010-11-20  Jigal van Hemert  <jigal@xs4all.nl>

	* Fixed bug #16486: BE livesearch results in errors when DBAL is installed
	* Fixed bug #16467: Missing array check in tt_content (Thanks to Bjoern Pedersen)

2010-11-20  Steffen Ritter  <typo3@steffen-ritter.net>

	* Added feature #15080: TYPO3 misses SpriterManager_handler using sprite-generation

2010-11-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to bug #16431: htmlArea RTE: in WebKit, clicking on image does not select it

2010-11-18  Rupert Germann  <rupi@gmx.li>

	* Follow-up to bug #7942: "Next" buttons where missing in update wizard.

2010-11-18  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16343: htmlArea RTE: JS-Error when closing "Insert Picture" dialogue

2010-11-18  Ernesto Baschny  <ernesto@typo3.org>

	* Release of TYPO3 4.5.0beta1

2010-11-18  Michael Stucki  <michael@typo3.org>

	* Added feature #7942: Enable UTF-8 by default (Thanks to Benni Mack and Christian Kuhn)

2010-11-17  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #16455: DISTINCT as a function is not compatible with DBAL

2010-11-17  Francois Suter  <francois@typo3.org>

	* Fixed bug #16147: getRecordOverlay fetches "Versioning Preview Overlay" but does not return the fields _ORIG_uid and _ORIG_pid (Thanks to Andreas Kiessling)

2010-11-17  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #16453: User Admin>List Users Online uses old styling (Thanks to Felix Kopp)
	* Fixed bug #16452: References table in Info popup uses old styling (Thanks to Felix Kopp)
	* Fixed bug #15189: Frontend Editing edit panels are shown for content element types that cannot be edited

2010-11-17  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16447: htmlArea RTE: Missing tooltip label for horizontal rule

2010-11-17  Christian Kuhn  <lolli@schwarzbu.ch>
